# Course-Materials

Sem5/OS Lab/: T01  T02
Sem7/BTP/: Report notes.odt
Sem7/BTP/Program Files/: CMakeLists.txt  FSMD.txt  debug.txt  input.c  input.ll  makefile  parser.cpp  parser2.cpp  run.sh
Sem7/BTP/Program Files/BenchmarkGame/: partialsums.ll  run
Sem7/BTP/Program Files/IR-FSMD/: output.txt  runCheckerForSameFile.sh  variables.txt
Sem7/BTP/Program Files/IR-FSMD/include/: FsmdaHeader.h  parser.h
Sem7/BTP/Program Files/IR-FSMD/src/: fsmda.lex  fsmda.tab.c  fsmdaCode.c  lex.yy.c  lva.c  main.c  main2.c  main3.c  normalization.c  valPropCode.c
Sem7/BTP/Program Files/IR-FSMD/srcCopy/: main.cpp  valPropCode.c
Sem7/BTP/Program Files/IR-FSMD2/: FSMD.txt  Makefile2  a.out  debug.txt  fannkuch.ll  n-body.ll  nsieve-bits.ll  out.txt  puzzle.ll  recursive.ll  runCheckerForSameFile.sh  spectral-norm.ll  todo - fsmd lexer
Sem7/BTP/Program Files/IR-FSMD2/include/: FsmdaHeader.h  fsmda.tab.h  valPropHeader.h
Sem7/BTP/Program Files/IR-FSMD2/src/: fsmda.tab.c  fsmda.y  fsmdaCode.c  lex.yy.c  lva.c  main.c  normalization.c
Sem7/BTP/Program Files/PreMade Code/Benchmarks/GCD/: output.txt
Sem7/BTP/Program Files/PreMade Code/Benchmarks/OUTPUT/: output.txt
Sem7/BTP/Program Files/PreMade Code/FsmdaEqvChecker/: runCheckerForSameFile.sh
Sem7/BTP/Program Files/PreMade Code/FsmdaEqvChecker/include/: FsmdaHeader.h
Sem7/BTP/Program Files/PreMade Code/FsmdaEqvChecker/src/: fsmda.tab.c  fsmdaCode.c  lva.c  normalization.c  valPropCode.c
Sem7/BTP/Program Files/PreMade Code/fsmda2dot/src/: fsmda.tab.c
Sem7/Speech/: Fundamentals of speech recognition by Rabiner L., Juang B.-H. (z-lib.org).djvu
(+162 files in other folders)
